Reviewed by Darin Adler.

Fixes: https://bugs.webkit.org/show_bug.cgi?id=25979

Fix regression, local WML files won't load anymore, as the mimetype isn't correctly detected.
Bug filed at <rdar://problem/6917571> to cover this CFNetwork limitation.


Canonical link: https://commits.webkit.org/36130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44294 268f45cc-cd09-0410-ab3c-d52691b4dbfc